--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,11 +23,11 @@ set_target_properties(test_version_cli PROPERTIES
         )
 
 target_link_libraries(helloworld_cli 
-          helloworld
+          pthread
         )
 
 target_link_libraries(test_version_cli
-        helloworld          
+        pthread          
 	$Boost_LIBRARIES
           
         )
