--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,7 @@ target_link_libraries(helloworld_cli
 
 target_link_libraries(test_version_cli
         pthread          
-	$Boost_LIBRARIES
+	${Boost_LIBRARIES}
           
         )
 
