--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
-add_executable(helloworld_cli main.cpp)
+add_executable(ip_filter main.cpp)
 
 add_executable(test_version_cli test.cpp)
 
 
-set_target_properties(helloworld_cli test_version_cli PROPERTIES
+set_target_properties(ip_filter test_version_cli PROPERTIES
         CXX_STANDARD 14
         CXX_STANDARD_REQUIRED ON
         COMPILE_OPTIONS -Wpedantic -Wall -Wextra
@@ -22,7 +22,7 @@ set_target_properties(test_version_cli PROPERTIES
           INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
         )
 
-target_link_libraries(helloworld_cli 
+target_link_libraries(ip_filter 
           pthread
         )
 
@@ -32,7 +32,7 @@ target_link_libraries(test_version_cli
           
         )
 
-install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
+install(TARGETS ip_filter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
